--- a/frontend/hearo_web/index.html
+++ b/frontend/hearo_web/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="%VITE_GOOGLE_OAUTH_ID%.apps.googleusercontent.com"
+    />
+    <meta name="google-signin-scope" content="profile email" />
     <title>Vite + React + TS</title>
   </head>
   <body>
