[S08P31A603-297] fe 대화창 view 구현 중

--- a/frontend/hearo_web/index.html
+++ b/frontend/hearo_web/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- google login -->
+    <meta name="google-signin-scope" content="profile email" />
     <meta
       name="google-signin-client_id"
       content="%VITE_GOOGLE_OAUTH_ID%.apps.googleusercontent.com"
     />
-    <meta name="google-signin-scope" content="profile email" />
-    <title>Vite + React + TS</title>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <title>Hearo</title>
+    <!-- google font : chewy -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chewy&display=swap"
+      rel="stylesheet"
+    />
+    <!-- google font : namun pen script -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chewy&family=Nanum+Pen+Script&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
