[S08P31A603-409] 소켓 통신 테스트 성공
Former-commit-id: fc53ff4494d5a20545a2e0c73980406738035ee0

--- a/backend/hearo_fastapi/socket-test.html
+++ b/backend/hearo_fastapi/socket-test.html
@@ -10,7 +10,7 @@
     ></script>
     <script>
       // Socket.IO 클라이언트 객체 생성
-      var socket = io("http://127.0.0.1:80");
+      var socket = io("http://k8a6032.p.ssafy.io:80");
 
       // 방에 들어가는 함수
       function joinRoom() {
@@ -36,6 +36,12 @@
 
       // 서버에서 보낸 메시지를 받는 함수
       socket.on("message", function (data) {
+        var message = data;
+        var messageDiv = document.createElement("div");
+        messageDiv.innerHTML = message;
+        document.getElementById("messages").appendChild(messageDiv);
+      });
+      socket.on("info", function (data) {
         var message = data;
         var messageDiv = document.createElement("div");
         messageDiv.innerHTML = message;
