[S08P31A603-457] web worker socket connection , multiThread
Former-commit-id: df151df7cd56afde1c8d94114a778b2cb6130ffd

--- a/frontend/hearo_web/index.html
+++ b/frontend/hearo_web/index.html
@@ -12,6 +12,7 @@
     />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <title>Hearo</title>
+    <base href="/" />
     <!-- google font : chewy -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
